# lab05-1

./: .travis.yml  CMakeLists.txt  README.md
banking/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  equation
solver_lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  solver.cpp
sources/: hello_word.cpp
tests/: test1.cpp  testAccount.cpp  testTransaction.cpp
